--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
     "tailwindcss": "^4.0.17",
-    "three": "^0.174.0"
+   "locar" : "^0.0.11",
+   "three" : "^0.175.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
